💄 fix wrapping

--- a/src/scss/components/_continue.scss
+++ b/src/scss/components/_continue.scss
@@ -26,9 +26,10 @@
         li {
             display: flex;
             span:first-child {
-                width: 8ch;
+                min-width: 8ch;
             }
             a {
+                min-width: 8ch;
                 text-decoration: none;
                 &:hover {
                     text-decoration: underline;
